--- a/ledger/build.gradle
+++ b/ledger/build.gradle
@@ -76,7 +76,7 @@ targetCompatibility = 11
 
 
 jar {
-    archiveBaseName = 'geektrust' //Please do not change this final artifact name
+    archiveBaseName = 'ledger' //Final artifact name matches module name
     version =  null               //Please do not change this final artifact version
     manifest {
         attributes 'Main-Class' : 'org.example.Main' //This is main class of your program which will be executed
